@supports publications layout bug

--- a/wp-content/themes/engage/assets/scss/components/_sidebar.scss
+++ b/wp-content/themes/engage/assets/scss/components/_sidebar.scss
@@ -34,12 +34,15 @@ aside.widget {
 		font-size: 0.85rem;
 	}
 }
+.full-width .newsletter__wrapper {
+	width: 100%;
+}
 // END base styles
 
 @supports not (display: grid) {
 	.archive__sidebar,
 	aside.widget {
-		@include media('max', $mobile) {
+		@include media("max", $mobile) {
 			order: 1;
 		}
 		@include media($phablet) {
@@ -55,7 +58,8 @@ aside.widget {
 	.archive__sidebar,
 	aside.widget {
 		@include media($phablet) {
-			@include flex-width(20%);
+			@include flex-width(15%);
+			order: 1;
 		}
 		@include media($tablet) {
 			display: flex;
@@ -64,7 +68,7 @@ aside.widget {
 			@include flex-width(15%);
 		}
 		@include media($laptop) {
-			@include flex-width($min-content-sm);
+			@include flex-width(20%);
 		}
 	}
 	.newsletter-post,
@@ -73,6 +77,9 @@ aside.widget {
 		@include media($phablet) {
 			@include flex-width(25%);
 		}
+	}
+	.full-width .newsletter__wrapper {
+		order: 4;
 	}
 } // END (display: flex)
 
@@ -85,6 +92,7 @@ aside.widget {
 		@include media($phablet) {
 			display: grid;
 			grid-column: 1/3;
+			grid-row: 1;
 		}
 	}
 	.newsletter-post,
